@@ -1,5 +1,6 @@
 * Changelog
 ** Unreleased 9.0.1
+  * Improve lsp--buffer-string-visible performance, avoide headvy generate-new-buffer
   * Add format on save support
   * Fix beancount journal file init option
   * Add support for [[https://github.com/glehmann/earthlyls][earthlyls]]
